dh-make-perl (0.61) UNRELEASED; urgency=low

  * Update template license text for debian/copyright to follow the DEP5
    Format-Specification at http://dep.debian.net/deps/dep5/. Update texts
    layout and drop use of License-Alias: Perl.

 -- Salvatore Bonaccorso <salvatore.bonaccorso@gmail.com>  Sun, 04 Oct 2009 16:21:18 +0200

dh-make-perl (0.60) unstable; urgency=low

  [ Ryan Niebur ]
  * fix MANIFEST file handling
  * use Test::DistManifest
  * add missing requires for Parse::DebControl
  * add missing build_requires on File::Touch
  * Update ryan52's email address

  [ gregor herrmann ]
  * Re-add "NO_NETWORK=1" to tests in debian/rules, got lost somewhere.
  * Only add a dependency on perl-modules if we need a newer version than the
    one in oldstable.
  * Documentation fix for Debian::Version::deb_ver_cmp.
  * Add perl (>= 5.10) to as a preferred alternative to libmodule-build-perl.
  * Check if the possible examples directory is actually a directory before
    adding "$directory/*" to <pkg>.examples; thanks to Slaven Rezic for the
    bug report (closes: #548950).
  * Rewrite comment about YAML::LoadFile in lib/DhMakePerl.pm; thanks to
    Slaven Rezic for the bug report (closes: #548935).

  [ Damyan Ivanov ]
  * Drop support for debhelper compatibility levels other than 7
  * stop creating Makefile from Build.PL

  [ Maximilian Gass ]
  * Added myself to uploaders
  * Ignore META.yml when it's not a hash (closes: #543655)

 -- Damyan Ivanov <dmn@debian.org>  Wed, 30 Sep 2009 15:41:04 +0300

dh-make-perl (0.59) unstable; urgency=low

  [ Damyan Ivanov ]
  * debian/rules: compact to (almost) 3 lines

  [ Salvatore Bonaccorso ]
  * Bump Standards-Version to 3.8.3 (dh-make-perl, tests and generated
    packages).
    - The requirement for Perl modules to have a versioned Depend and
      Build-Depend on perl >= 5.6.0-16 has been removed.
  * t/Control.t: Adjust use of perl dependency in Build-Depends-Indep